# xoodyak-py

./: pyproject.toml
tests/: test_xoodoo.py  test_xoodyak.py
xoodyak/: __init__.py  xoodoo.py  xoodyak.py
