[tool.poetry]
name = "xoodyak"
version = "0.1.0"
description = ""
authors = ["nixberg <k.nixberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
